--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-# 应用名称
+# \u5E94\u7528\u540D\u79F0
 spring.application.name=bridge-of-agriculture
-# 数据库驱动：
+# \u6570\u636E\u5E93\u9A71\u52A8\uFF1A
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-# 数据库连接地址
+# \u6570\u636E\u5E93\u8FDE\u63A5\u5730\u5740
 spring.datasource.url=jdbc:mysql://119.23.54.229:3306/wx_mini_db?serverTimezone=UTC
-# 数据库用户名&密码：
+# \u6570\u636E\u5E93\u7528\u6237\u540D&\u5BC6\u7801\uFF1A
 spring.datasource.username=root
 spring.datasource.password=123456
+# ========================swagger=====================
+spring.swagger2.enabled=true
 # ========================redis=====================
 spring.redis.port=6379
 #spring.redis.host=redis
@@ -26,4 +28,10 @@ mybatis-plus.configuration.map-underscore-to-camel-case=true
 # ========================wechat==========================
 wechat-mini.appid=wxab6ab6b6e51b50eb
 wechat-mini.secret=1a34c0be8c2e92e8912608faaca82fd2
+# ========================alibaba-message-service==========================
+alibaba-send-message.access-key-id=LTAI5tSVJqwTYCCxAi2g23uB
+alibaba-send-message.access-key-secret=Ci8HI7YAeqcwecEuCPgHF0BQT5L70K
+#templateCode\u548CsignName\u5FC5\u987B\u76F8\u5339\u914D\u5E76\u7ED3\u5408\u4F7F\u7528
+alibaba-send-message.template-code=SMS_154950909
+alibaba-send-message.sign-name=\u963F\u91CC\u4E91\u77ED\u4FE1\u6D4B\u8BD5
 
