--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,12 @@ alibaba-send-message.access-key-secret=Ci8HI7YAeqcwecEuCPgHF0BQT5L70K
 #templateCode\u548CsignName\u5FC5\u987B\u76F8\u5339\u914D\u5E76\u7ED3\u5408\u4F7F\u7528
 alibaba-send-message.template-code=SMS_154950909
 alibaba-send-message.sign-name=\u963F\u91CC\u4E91\u77ED\u4FE1\u6D4B\u8BD5
+# ========================Elasticsearch==========================
+#????
+elasticsearch.host=127.0.0.1
+#????
+elasticsearch.port=9200
+# ??????,?? debug ??
+logging.level.com.atguigu.es=debug
+
 
