--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,11 @@ spring.swagger2.enabled=true
 # ========================redis=====================
 spring.redis.port=6379
 #spring.redis.host=redis
-spring.redis.host=localhost
+#spring.redis.host=localhost
+#docker run -d --name redis -p 6379:6379 --restart unless-stopped -v /docker/redis/data:/data -v /docker/redis/conf/redis.conf:/etc/redis/redis.conf redis:6.0.8 --requirepass airenpA1 --appendonly yes
+spring.redis.host=120.78.212.240
 spring.redis.database=0
-#spring.redis.password=airenpA1
+spring.redis.password=airenpA1
 spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1ms
 spring.redis.jedis.pool.max-idle=8
@@ -26,7 +28,7 @@ mybatis-plus.type-aliases-package=com.turing.entity
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 # ========================wechat==========================
-wechat-mini.appid=wxab6ab6b6e51b50eb
+wechat-mini.appid=wx4245dd331ef7eb89
 wechat-mini.secret=1a34c0be8c2e92e8912608faaca82fd2
 # ========================alibaba-message-service==========================
 alibaba-send-message.access-key-id=LTAI5tSVJqwTYCCxAi2g23uB
@@ -34,12 +36,4 @@ alibaba-send-message.access-key-secret=Ci8HI7YAeqcwecEuCPgHF0BQT5L70K
 #templateCode\u548CsignName\u5FC5\u987B\u76F8\u5339\u914D\u5E76\u7ED3\u5408\u4F7F\u7528
 alibaba-send-message.template-code=SMS_154950909
 alibaba-send-message.sign-name=\u963F\u91CC\u4E91\u77ED\u4FE1\u6D4B\u8BD5
-# ========================Elasticsearch==========================
-#????
-elasticsearch.host=127.0.0.1
-#????
-elasticsearch.port=9200
-# ??????,?? debug ??
-logging.level.com.atguigu.es=debug
-
 
