--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,11 +35,8 @@ alibaba-send-message.access-key-secret=Ci8HI7YAeqcwecEuCPgHF0BQT5L70K
 alibaba-send-message.template-code=SMS_154950909
 alibaba-send-message.sign-name=\u963F\u91CC\u4E91\u77ED\u4FE1\u6D4B\u8BD5
 # ========================Elasticsearch==========================
-#????
-elasticsearch.host=127.0.0.1
-#????
-elasticsearch.port=9200
-# ??????,?? debug ??
-logging.level.com.atguigu.es=debug
+spring.elasticsearch.rest.uris= 119.23.54.229:9200
+spring.data.elasticsearch.repositories.enabled=true
+
 
 
